Add project macros as cmake options

--- a/tx-rx/CMakeLists.txt
+++ b/tx-rx/CMakeLists.txt
@@ -11,6 +11,17 @@ if(NOT CMAKE_BUILD_TYPE)
         FORCE)
 endif()
 
+option(LIBDXWIFI_DISABLE_ASSERTS    "Disable Assert Functions"     OFF)
+option(LIBDXWIFI_DISABLE_LOGGING    "Disable Logging"              OFF)
+
+if(LIBDXWIFI_DISABLE_ASSERTS)
+    add_compile_definitions(LIBDXWIFI_DISABLE_ASSERTS)
+endif()
+
+if(LIBDXWIFI_DISABLE_LOGGING)
+    add_compile_definitions(LIBDXWIFI_DISABLE_LOGGING)
+endif()
+
 include_directories(${PROJECT_SOURCE_DIR})
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE})
