--- a/tx-rx/config/systemd/oresat-dxwifi-txd.service
+++ b/tx-rx/config/systemd/oresat-dxwifi-txd.service
@@ -1,3 +1,6 @@
+# OreSat 0 Daemon, transmits the test sequence continously on device mon0
+# This file will need to be changed for the final OreSat Live product
+
 [Unit]
 Description=OreSat Live Transmission service
 
