--- a/tx-rx/CMakeLists.txt
+++ b/tx-rx/CMakeLists.txt
@@ -54,7 +54,7 @@ set(CPACK_PACKAGE_VERSION ${DXWIFI_VERSION})
 set(CPACK_PACKAGE_CONTACT "PSAS <oresat@pdx.edu>")
 set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Oresat Live DxWiFi")
 set(CPACK_DEBIAN_PACKAGE_SECTION "net")
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "libpcap-dev (>= 1.8.1-6)")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libpcap-dev (>= 1.8.1-6), iw")
 set(CPACK_DEB_COMPONENT_INSTALL ON)
 set(CPACK_DEBIAN_ENABLE_COMPONENT_DEPENDS ON)
 set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/oresat/oresat-dxwifi-software")
