Update readme, tx daemon command
Added install instructions to the readme
Set tx daemon to not send control frames.
Added startmonitor.sh to Rx installation

--- a/tx-rx/dxwifi/rx/CMakeLists.txt
+++ b/tx-rx/dxwifi/rx/CMakeLists.txt
@@ -12,6 +12,27 @@ install(
     COMPONENT RX
     )
 
+install(
+    FILES ${CMAKE_SOURCE_DIR}/startmonitor.sh
+    DESTINATION /usr/bin/
+    PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+    RENAME "startmonitor"
+    COMPONENT RX
+    )
+
+if(INSTALL_SYSLOG_CONFIG)
+    install(
+        FILES ${CMAKE_SOURCE_DIR}/config/logrotate/dxwifi.conf
+        DESTINATION /etc/logrotate.d
+        COMPONENT RX
+        )
+    install(
+        FILES ${CMAKE_SOURCE_DIR}/config/rsyslog/00-dxwifi.conf
+        DESTINATION /etc/rsyslog.d
+        COMPONENT RX
+        )
+endif()
+
 cpack_add_component(
     RX
     DISPLAY_NAME RX 
