Made openfec a static library

--- a/tx-rx/openfec/src/CMakeLists.txt
+++ b/tx-rx/openfec/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 file (GLOB_RECURSE openfec_sources *)
 
-add_library(openfec  SHARED  ${openfec_sources})
+add_library(openfec  STATIC  ${openfec_sources})
 
 # From: $cmake --help-property SOVERSION
 #		For shared libraries VERSION and SOVERSION can be used to specify
