Change workflow name and fix install comand

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -1,4 +1,4 @@
-name: Build & Test
+name: Build/Test
 
 on: push
 
@@ -20,7 +20,7 @@ jobs:
           submodules: recursive
       
       - name: Get Developer Dependencies
-        run: sudo apt update && apt install build-essential libpcap-dev iw cmake python3 valgrind -y
+        run: sudo apt update && sudo apt install build-essential libpcap-dev iw cmake python3 valgrind -y
 
       - name: Configure CMake
         working-directory: tx-rx
