--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -3,15 +3,16 @@ name: Build/Test
 on: push
 
 jobs:
-  build:
+  build-test:
     # TODO: Should run this workflow on the correct oresat-generic-image. 
     # We should do one of the following:
     #   - Publish a docker image of the oresat-generic-image pull it down and run from it
     #   - Make the FlatSat's dxwifi board a self-hosted runner
     #   - Something else? 
     runs-on: ubuntu-20.04
-
-    # TODO: Define build matrix so we can build and test for every cmake configuration
+    strategy:
+      matrix:
+        build_type: [Debug, Release, MinSizeRel, TestDebug, TestRel]
 
     steps:
       - name: Checkout DxWiFi Repository
@@ -25,14 +26,25 @@ jobs:
       - name: Configure CMake
         working-directory: tx-rx
         shell: bash
-        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=TestDebug -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
+        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
 
       - name: Build
         working-directory: tx-rx
         shell: bash
         run: cmake --build build --parallel 6
 
-      - name: Run System Tests
+      - name: Run System Tests - TestDebug
         working-directory: tx-rx
+        if: ${{ matrix.build_type == TestDebug }}
+        env: 
+          DXWIFI_INSTALL_DIR: bin/TestDebug
+        shell: bash
+        run: python -m unittest
+
+      - name: Run System Tests - TestRel
+        working-directory: tx-rx
+        if: ${{ matrix.build_type == TestRel }}
+        env: 
+          DXWIFI_INSTALL_DIR: bin/TestRel
         shell: bash
         run: python -m unittest
