--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -1,6 +1,12 @@
 name: Build/Test
 
-on: push
+on: 
+  push:
+    paths-ignore:
+    - 'archive/**'
+    - '**/README.md'
+    - '**/LICENSE'
+    - '**/.gitignore'
 
 jobs:
   build-test:
