--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -1,12 +1,13 @@
 name: Build/Test
 
 on: 
-  [push, pull_request]:
+  push:
     paths-ignore:
     - 'archive/**'
     - '**/README.md'
     - '**/LICENSE'
     - '**/.gitignore'
+  pull_request:
 
 jobs:
   build-test:
