DxWiFi TX daemon now enables the PA

--- a/tx-rx/config/systemd/oresat-dxwifi-txd.service
+++ b/tx-rx/config/systemd/oresat-dxwifi-txd.service
@@ -8,7 +8,7 @@ Description=OreSat Live Transmission service
 Type=forking
 PIDFile=/run/oresat-dxwifi-txd.pid
 ExecStartPre=/usr/bin/startmonitor mon0
-ExecStart=/usr/bin/tx --dev mon0 -r -1 --test --retransmit -1 --daemon start
+ExecStart=/usr/bin/tx --dev mon0 -r -1 --test --retransmit -1 --enable-pa --daemon start
 ExecStop=/usr/bin/tx --daemon stop
 User=root
 Group=root
