--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -26,7 +26,7 @@ jobs:
         with: 
           submodules: recursive
       
-      - name: Get Developer Dependencies
+      - name: Get Dependencies
         run: sudo apt update && sudo apt install build-essential libpcap-dev libgpiod-dev iw cmake python3 valgrind -y
 
       - name: Configure CMake
