Fixed paths for github actions

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -30,27 +30,25 @@ jobs:
         run: sudo apt update && sudo apt install build-essential libpcap-dev libgpiod-dev cmake python3 valgrind -y
 
       - name: Configure CMake
-        working-directory: tx-rx
         shell: bash
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
 
       - name: Build
-        working-directory: tx-rx
         shell: bash
         run: cmake --build build --parallel 6
 
       - name: Run System Tests - TestDebug
-        working-directory: tx-rx
         if: ${{ matrix.build_type == 'TestDebug' }}
         env: 
           DXWIFI_INSTALL_DIR: bin/TestDebug
+          DXWIFI_MEMORY_CHECK: true
         shell: bash
         run: python -m unittest
 
       - name: Run System Tests - TestRel
-        working-directory: tx-rx
         if: ${{ matrix.build_type == 'TestRel' }}
         env: 
           DXWIFI_INSTALL_DIR: bin/TestRel
+          DXWIFI_MEMORY_CHECK: true
         shell: bash
         run: python -m unittest
