--- a/openfec/CMakeLists.txt
+++ b/openfec/CMakeLists.txt
@@ -11,19 +11,19 @@ else(PROFILING STREQUAL "ON")
 
 endif(PROFILING STREQUAL "ON")
 
-if (DEBUG STREQUAL "ON")
+if (OPENFEC_DEBUG_MODE STREQUAL "ON")
 # Debug mode
 ADD_DEFINITIONS(-DOF_DEBUG)
 set(CMAKE_BUILD_TYPE Debug) 
 message(STATUS "Debug mode ON" )
 
-else(DEBUG STREQUAL "ON")
+else()
 # Release mode
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_C_FLAGS "-O4")
 message(STATUS "Debug mode OFF")
 
-endif (DEBUG STREQUAL "ON")
+endif ()
 
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
