--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "rscode"]
 	path = rscode
-	url = git@github.com:AlexanderJDupree/rscode.git
+	url = https://github.com/AlexanderJDupree/rscode.git
